--- a/package.json
+++ b/package.json
@@ -12,17 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.27",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.3",
+    "morgan": "^1.9.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jessicamenius/17homework.git"
-  },
-  "keywords": [],
-  "bugs": {
-    "url": "https://github.com/jessicamenius/17homework/issues"
-  },
-  "homepage": "https://github.com/jessicamenius/17homework#readme"
+  "keywords": []
 }
