--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.3.16",
     "morgan": "^1.9.1"
   },
-  "keywords": []
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jessicamenius/17homework.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/jessicamenius/17homework/issues"
+  },
+  "homepage": "https://github.com/jessicamenius/17homework#readme"
 }
